--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,18 +5,11 @@
 #spring.thymeleaf.mode=LEGACYHTML5
 #server.contextPath=/projectcrm
 server.session.timeout=18000
-#server.address=127.0.0.1
-server.port = 8080
-
-#spring.datasource.url= jdbc:mysql://${WORDPRESS_DB_HOST}/projectel
-#spring.datasource.username=${WORDPRESS_DB_USER}
-#spring.datasource.password=${WORDPRESS_DB_PASSWORD}
 
 
-spring.datasource.url= jdbc:mysql://${MYSQL_SERVICE_HOST}:3306/projectel
-spring.datasource.username=admin
-spring.datasource.password=admin
-
+spring.datasource.url= jdbc:mysql://localhost:3306/projectel
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
